@@ -1,3 +1,7 @@
+2002-02-08  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Msg/Task/ADAM.pm (_to_orac_status): Add MSP__ error codes
+
 2001-12-26  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* General.pm (getnum): Add is_numeric
